commented out index.html content and editted terminal.html

--- a/root/index.html
+++ b/root/index.html
@@ -24,17 +24,18 @@
     </head>
     <body>
         <main class="term-main">
-            <div id="scanline"></div>
-            <!--<div id="screen1">-->
+            To Be Implmented
+<!--            <div id="scanline"></div>
+            <div id="screen1">
             <header>
-                <!--<i class="fas fa-terminal"></i>-->
+                <i class="fas fa-terminal"></i>
                 >_ONLINE TERMINAL NETWORK█
             </header>
             <hr />
             <section id="infopane">
                 <h1>Terminal HUB</h1>
 
-                <!--<button type="button" onclick="writeCookie()">Add Cookie</button>-->
+                <button type="button" onclick="writeCookie()">Add Cookie</button>
                 <details>
                     <summary>Welcome</summary>
                     <p>
@@ -67,7 +68,7 @@
                             <td><button type="button" id="power" title="Connect to Selected Terminal">Connect</button></td>
                         </tr>
                         <tr>
-                            <!--<td><span id="terminal-sel"></span></td>-->
+                            <td><span id="terminal-sel"></span></td>
                             <td><label for="theme">Select Theme (optional):</label></td>
                             <td><select name="theme" id="theme">
                                     <option value="">Theme</option>
@@ -180,13 +181,13 @@
                         <div id="input"><input name="t-in" id="t-in" ></div> <span></span>
                     </div>
                 </div>
-            </section>
+            </section>-->
             <!--</div>-->
         </main>
 
         <!--<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>-->
         <!--<script src="Assets/utils/terminal.js"></script>-->
-        <script src="Assets/util/terminal.js"></script>
+        <!--<script src="Assets/util/terminal.js"></script>-->
         <!--<script  src="..//src/terminal.js" type="module"></script>-->
     </body>
 </html>
