--- a/root/terminal.html
+++ b/root/terminal.html
@@ -21,7 +21,6 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script src="https://kit.fontawesome.com/f1903f98ac.js" crossorigin="anonymous"></script>
         <script src="Assets/js/cookies.js"></script>
-
     </head>
     <body>
         <main class="term-main">
@@ -77,6 +76,14 @@
                                 </select></td>
                         </tr>
                     </table>
+                    <table id="info"><tr>
+                        <td>Terminal:</td>
+                        <td><data id="term" value=""></data></td>
+                        <td></td>
+                    </tr>
+                    <tr><td>Connection State: </td>
+                        <td><data id="connect" value="-1">Not Connected</data></td></tr>
+                </table>
                 </details>
 
 
@@ -165,23 +172,16 @@
                     </ul>
                 </details>
             </section>
-            <section id="terminal" class="off">
-                <table id="info"><tr>
-                        <td>Terminal:</td>
-                        <td><data id="term" value=""></data></td>
-                        <td></td>
-                    </tr>
-                    <tr><td>Connection State: </td>
-                        <td><data id="connect" value="-1">Not Connected</data></td></tr>
-                </table>
+            <div class="terminal" class="off">
+                
                 
                 <hr />
-                <div class="screen2">
-                    <div id="term-content">
+                <div class="monitor">
+                    <div id="content">
                         <div id="input"><input name="t-in" id="t-in" ></div> <span></span>
                     </div>
                 </div>
-            </section>
+            </div>
             <!--</div>-->
         </main>
 
